<resources>
    <string name="app_name" translatable="false">Franssen Properties, Inc.</string>

    <string name="exploreBtn">Explore</string>
    <string name="logInBtn">Log In</string>
    <string name="locationBtn">Location</string>
    <string name="threeCpBtnAply">Apply </string>
    <string name="twoCpBtnAplly">Apply</string>
    <string name="centennial_Title">Centennial Park Of Kearney Apartments</string>
    <string name="application_str" translatable="false">Application For Housing</string>
    <string name="a_appli_str" translatable="false">A. Applicant: </string>
    <string name="name_str">Name</string>
    <string name="address_str" translatable="false">Address: </string>
    <string name="city_str">City: </string>
    <string name="state_str">State: </string>
    <string name="zip_str">Zip: </string>
    <string name="phone_str">Telephone: </string>
    <string name="student_radio">Student: </string>
    <string name="yes_radio">Yes</string>
    <string name="no_radio">No</string>
    <string name="relative_title_str">Name, Address, and Phone Number of Relatives or Friends</string>
    <string name="rel_name_str">Name: </string>
    <string name="rel_relation_str">Relationship</string>
    <string name="title_activity_log_in">Sign in</string>
    <string name="relative_2_title">Relative 2:</string>
    <string name="property_number">Property Phone Number</string>
    <string name="continue_btn">Continue >></string>

    <string name="tenant_name_str">Tenant Name</string>
    <string name="tips_str">This are going to be the long test about the tips in the apt</string>
    <string name="news_str">This are going to be the news that we send evy month</string>
    <string name="service_request_str">Create A Service Request</string>
    <string name="emergency_str">Emergency</string>
    <string name="call911_str">Call 911 Now! \n \nIf your life or the life of others \nare at risk. </string>
    <string name="call_btn_str">Call 911</string>


    <string name="work_emergency_str">Work Emergency \nPhone Number</string>
    <string name="work_emergency_btn_str">Call Maintenance</string>
    <string name="emergency_tips_str">For flood. \nTurn the shut off values right away. \nThen call Emergency Phone Number
    If you see sparks in outlets \nTurn the breakers off located in the electrical box.
    \n </string>
    <string name="create_str">Creat Account</string>
    <string name="login_str">Log In</string>
    <string name="login_btn_str">Log In </string>

    <string name="email_text_str">Email</string>
    <string name="password_text_str">Password</string>
    <string name="question_str">Are yu omving from a HUD subsidized property?</string>
    <string name="if_yes_str">If yes: Property Name: </string>
    <string name="property_number_str">Property Phone Number: </string>
    <string name="submit_btn_str">Submit</string>

    <string name="category_str">Category: Electrical, Plumbing...</string>
    <string name="issue_str">Issue</string>
    <string name="permission_str">Permission to Enter</string>
    <string name="contact_str">Contact Information: </string>
    <string name="apt_str">Apartament Number: </string>

    <string name="tips_title_str">Tips</string>
    <string name="tips_textbox_str">This is where the tips are going \n to be posted </string>
    <string name="contact_cp_str">Centennial Parrk Apartaments </string>
    <string name="cp_info_str">1000 4th Ave. Kearney, NE, \n68845 \nPhone Number: (308)236-6617  \ncentennial@fp.com</string>
    <string name="pv_contact_str">Praire View Apartaments \nSouth Prairie View Apartments</string>
    <string name="pv_info_str">211 E 8th St. \n Kearney, NE \n 68847 \nPhone Number: 308-234-4916 \npraireview@fp.com</string>
    <string name="head_str">Headquarter</string>
    <string name="head_info_str">8032 Mapple St. \nOmaha, NE \n322322 \nPhone: (402)391-4500 \ntiffany@gmail.com</string>

    <string name="present_house">B. Present Housing Status</string>
    <string name="have_hud_str">Have you ever applied for housing with us before?</string>
    <string name="under_name">If yes, under what name: </string>
    <string name="when">When :</string>
    <string name="date">Date</string>
    <string name="name_landlord">Present Landlord: </string>
    <string name="prev_land">Previous Landlord: </string>
    <string name="c_title_strt">C. Family or Household Composition: </string>
    <string name="c_list">List head of household and all other person who will reside in the unit. </string>
    <string name="Uno">1. </string>
    <string name="age">Age</string>
    <string name="brth_str">Birth Date</string>
    <string name="full_name">Full Name</string>
    <string name="social_number">Social Security #</string>
    <string name="relative_handycap">Any of the Family members have any disability?</string>
    <string name="if_handy">If so, which member and what is the disibility of handicap? </string>

    <string name="application_D">D. Income</string>
    <string name="income_pr">List all income sources for all members or persons who will reside in the unit. This includes income from full and/or part time employment. Income from welfare agencies, social security, pensions, SSI, disability income, unemployment income, child care, or regular income from any other source.</string>
    <string name="d_family_me">Family Member: </string>
    <string name="income_source">Type and Source of Income</string>
    <string name="gross_income">Gross Income</string>

    <string name="assets">E. Assets: </string>
    <string name="have_checking">Do you have a checking account? </string>
    <string name="bank">What Bank? </string>
    <string name="have_saving">Do you have a saving account? </string>
    <string name="saving_bank">What Bank? </string>
    <string name="property">Do you have any real estate property?</string>
    <string name="property_if">If so, valuation of property: </string>
    <string name="did_have_asset">Did you have any assets in the last two years not listed above? </string>
    <string name="valuation_if">If yes, Did you dispose of any asset for less than fair market value?  </string>
    <string name="hiint_valuation">(This means that the assets were either given away or solt ar less than the alloted market valued.)</string>
    <string name="what_assets_market_value">What were the assets, the market value at the time of disposition, the amount received and the date that you disposed of them? </string>
    <string name="vihecle_qst">Do you own a vehicle? </string>
    <string name="make">Make</string>
    <string name="model">Modek</string>
    <string name="year">Year</string>
    <string name="license">License PLate #</string>
    <string name="hear_about">How did you hear about the property? </string>
    <string name="self_sufficient">Are you self_sufficient and able to care for yourself? </string>
    <string name="abide_lease">Are you able to abide by the terms of the least? </string>
    <string name="agree_str">I agree to give the management agent the authority to investigate my credit rating and my current and past rental record. The information obtained will be used for the management purposes only and will be held in strict confidence. The above information is true and correct to the best of my knowledge.</string>
    <string name="understand">I UNDERSTAND THAT THIS APPLICATION MAY TAKE A MINIMUM OF SIX WEEKS TO PROCESS. </string>
    <string name="signature">SIGNATURE</string>
    <string name="thanks">Thank for Appliying with \n Franssen Properties, Inc.</string>


    <string name="select_property_title">Select a Property to apply </string>
    <string name="pv_name_str">Prairie View Apartments of Kearney</string>
    <string name="spv_name_str">South Prairie View Apartments</string>

    <string name="register">Register</string>
    <string name="enter_user">Enter Username</string>
    <string name="enter_pass">Enter Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="create_btn_str">Create Account</string>
    <string name="unit_name_reg">Enter Unit Number</string>

    <string name="select_proper">Please Select One Property!</string>
    <string name="title_activity_pv_gallery">PvGallery</string>
    <string name="title_activity_menu">Menu</string>

    <!-- Strings for Menu -->
    <string name="my_account">My Account</string>
    <string name="favorites">Favorites</string>
    <string name="rent_calculator">Rent Calculator</string>
    <string name="apply">Apply</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="action_settings">Settings</string>


    <!-- Rent Calculator -->

    <string name="rent_estimator">Rent Estimator </string>
    <string name="rent_limit">Income Limits </string>

    <string name="about_us">About Us</string>
    <string name="about_str">Everyone needs a place to live. \n Franssen Properties was founded in 2003. \n
        From the first site in our portfolio to now, \n Franssen Properties strives to achieve the greatest tenant satisfaction \n
        possible within the policies and contracts we operate. \n \n Equal Housing Opportunity</string>

    <string name="feedback_title">We appriciate your Feedback</string>
    <string name="feedback_enter">Please enter your feedback...</string>

    <string name="send">Send</string>

    <string name="advise">Remember to turn off your stove. \n If you hear leaks or water running call the maintenance phone number \n or set a Service request.</string>
    <string name="news">Spring is here and that means that it is time for Spring Cleaning \n During the First Two weeks \n of May you can take your Spring Cleaning \n items to the
    dumspter located in the south west part of the property. </string>

    <string name="enter_service_request">Please enter the next information: </string>
    <string name="contact_inf">Contact Information</string>
    <string name="call_now"> Call now!</string>


</resources>
