<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.edwingariza.menuapp.MainActivity">

    <item
        android:id="@+id/my_account"
        android:orderInCategory="200"
        android:title="@string/my_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/rent_calculator"
        android:orderInCategory="400"
        android:title="@string/rent_calculator"
        app:showAsAction="never"/>
    <item
        android:id="@+id/apply"
        android:orderInCategory="300"
        android:title="@string/apply"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        android:orderInCategory="500"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="700"
        app:showAsAction="never"/>
    <item
        android:id="@+id/feedback"
        android:orderInCategory="800"
        android:title="@string/feedback" />
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="Home" />

</menu>
