<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView54"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_str"
        android:inputType="textPersonName"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/unit_num_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unit_name_reg"
        android:inputType="textPersonName"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_user"
        android:inputType="textPersonName"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:paddingTop="10dp"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onSignUpClick"
        android:paddingTop="10dp"
        android:text="@string/register" />


     

     
     

    



</LinearLayout>
