<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:text="@string/present_house"
            android:textAlignment="center"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/gridLayout2"
            android:text="@string/have_hud_str"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/have_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes_radio" />

            <RadioButton
                android:id="@+id/have_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_radio" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/haveRadioGroup"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/under_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_have"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:ems="10"
            android:hint="@string/name_str"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name_have"
            android:layout_alignStart="@+id/name_have"
            android:layout_below="@+id/name_have"
            android:layout_marginTop="21dp"
            android:text="@string/when"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/when_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView19"
            android:layout_alignBottom="@+id/textView19"
            android:layout_alignEnd="@+id/gridLayout2"
            android:layout_alignRight="@+id/gridLayout2"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView19"
            android:layout_alignStart="@+id/textView19"
            android:layout_below="@+id/textView19"
            android:layout_marginTop="21dp"
            android:text="@string/name_landlord"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/landlord_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView20"
            android:layout_alignStart="@+id/textView20"
            android:layout_below="@+id/textView20"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/rel_name_str"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/land_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/landlord_name"
            android:layout_alignStart="@+id/landlord_name"
            android:layout_below="@+id/landlord_name"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/phone_str"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView10"
            android:layout_alignLeft="@+id/land_phone"
            android:layout_alignRight="@+id/textView10"
            android:layout_alignStart="@+id/land_phone"
            android:layout_below="@+id/land_phone"
            android:layout_marginTop="20dp"
            android:text="@string/prev_land"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/prev_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/land_phone"
            android:layout_alignRight="@+id/land_phone"
            android:layout_below="@+id/textView21"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/rel_name_str"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/prev_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/prev_name"
            android:layout_alignStart="@+id/prev_name"
            android:layout_below="@+id/prev_name"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/phone_str"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prev_phone"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"

            android:layout_marginTop="13dp"
            android:onClick="onClickContinueC"
            android:text="@string/continue_btn" />

    </LinearLayout>
</ScrollView>
