<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> 


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </GridLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_centerHorizontal="true"
            android:text="@string/application_str"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="right"
            android:text="@string/centennial_Title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_appli_str"
            android:layout_below="@+id/textView14"
            android:layout_alignLeft="@+id/textView22"
            android:layout_alignStart="@+id/textView22" />

        <EditText
            android:id="@+id/name_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/name_str"
            android:inputType="textPersonName"
            android:layout_below="@+id/date_Text"
            android:layout_alignLeft="@+id/date_Text"
            android:layout_alignStart="@+id/date_Text" />

        <EditText
            android:id="@+id/date_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView15"
            android:layout_alignStart="@+id/textView15"
            android:layout_below="@+id/textView15"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date" />

        <EditText
            android:id="@+id/address_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/address_str"
            android:inputType="textPersonName"
            android:layout_below="@+id/name_Text"
            android:layout_alignLeft="@+id/name_Text"
            android:layout_alignStart="@+id/name_Text" />

        <EditText
            android:id="@+id/city_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/city_str"
            android:inputType="textPersonName"
            android:layout_below="@+id/address_Text"
            android:layout_alignLeft="@+id/address_Text"
            android:layout_alignStart="@+id/address_Text" />

        <EditText
            android:id="@+id/state_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/state_str"
            android:inputType="textPersonName"
            android:layout_below="@+id/city_Text"
            android:layout_alignLeft="@+id/city_Text"
            android:layout_alignStart="@+id/city_Text" />

        <EditText
            android:id="@+id/zip_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/zip_str"
            android:inputType="number"
            android:layout_below="@+id/state_Text"
            android:layout_alignLeft="@+id/state_Text"
            android:layout_alignStart="@+id/state_Text" />

        <EditText
            android:id="@+id/phone_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/phone_str"
            android:inputType="phone"
            android:layout_below="@+id/zip_Text"
            android:layout_alignLeft="@+id/zip_Text"
            android:layout_alignStart="@+id/zip_Text" />

        <EditText
            android:id="@+id/address_rel_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/relation_Text"
            android:layout_alignStart="@+id/relation_Text"
            android:layout_below="@+id/relation_Text"
            android:ems="10"
            android:hint="@string/address_str"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_Text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/gridLayout"
            android:layout_toRightOf="@+id/gridLayout"
            android:text="@string/student_radio"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView23"
            android:layout_toEndOf="@+id/textView27"
            android:layout_toRightOf="@+id/textView27" />

        <RadioButton
            android:id="@+id/yes_stud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:layout_alignTop="@+id/textView22"
            android:text="@string/yes_radio"
            android:layout_alignBottom="@+id/textView22" />

        <RadioButton
            android:id="@+id/no_stud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/yes_stud"
            android:layout_toEndOf="@+id/address_rel_1"
            android:layout_toRightOf="@+id/address_rel_1"
            android:text="@string/no_radio" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yes_stud"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/relative_title_str"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/rel_name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView22"
            android:layout_alignStart="@+id/textView22"
            android:layout_below="@+id/textView23"
            android:ems="10"
            android:hint="@string/rel_name_str"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/relation_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rel_name_1"
            android:layout_alignStart="@+id/rel_name_1"
            android:layout_below="@+id/rel_name_1"
            android:ems="10"
            android:hint="@string/rel_relation_str"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phone_rel_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/address_rel_1"
            android:layout_alignStart="@+id/address_rel_1"
            android:layout_below="@+id/address_rel_1"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/phone_str" />

        <EditText
            android:id="@+id/name_rel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phone_rel_1"
            android:layout_alignStart="@+id/phone_rel_1"
            android:layout_below="@+id/phone_rel_1"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name_str" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_rel_1"
            android:layout_toEndOf="@+id/textView22"
            android:layout_toRightOf="@+id/textView22"
            android:text="@string/relative_2_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/relation_rel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name_rel_2"
            android:layout_alignStart="@+id/name_rel_2"
            android:layout_below="@+id/name_rel_2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/rel_relation_str" />

        <EditText
            android:id="@+id/address_rel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/relation_rel_2"
            android:layout_alignStart="@+id/relation_rel_2"
            android:layout_below="@+id/relation_rel_2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/address_str" />

        <EditText
            android:id="@+id/phone_rel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/address_rel_2"
            android:layout_alignStart="@+id/address_rel_2"
            android:layout_below="@+id/address_rel_2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/phone_str" />

        <Button
            android:id="@+id/apply_conti_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/property_name_text"
            android:layout_alignRight="@+id/property_name_text"
            android:layout_below="@+id/property_name_text"
            android:layout_marginTop="57dp"
            android:text="@string/continue_btn" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_rel_2"
            android:layout_marginTop="19dp"
            android:text="@string/question_str"
            android:textSize="18sp"
            android:layout_alignLeft="@+id/phone_rel_2"
            android:layout_alignStart="@+id/phone_rel_2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/hud_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/yes_stud"
            android:layout_alignRight="@+id/yes_stud"
            android:layout_below="@+id/textView26"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="12dp"
            android:text="@string/yes_radio" />

        <RadioButton
            android:id="@+id/hud_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/hud_yes"
            android:layout_toEndOf="@+id/textView24"
            android:layout_toRightOf="@+id/textView24"
            android:text="@string/no_radio" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/if_yes_str"
            android:textSize="18sp"
            android:layout_below="@+id/hud_yes"
            android:layout_alignLeft="@+id/textView26"
            android:layout_alignStart="@+id/textView26" />

        <EditText
            android:id="@+id/property_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name_str"
            android:layout_below="@+id/textView27"
            android:layout_alignLeft="@+id/textView27"
            android:layout_alignStart="@+id/textView27" />

        <EditText
            android:id="@+id/property_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/property_number"
            android:layout_below="@+id/property_name_text"
            android:layout_alignRight="@+id/apply_conti_btn"
            android:layout_alignEnd="@+id/apply_conti_btn" />

    </RelativeLayout>
</ScrollView>
